0.6.0 (currently working on)
- [#1584] Fix: Missing colon in the flexforms in the default language
- [#1574] Feature: Bag builders should provide their WHERE clauses to the public world
- [#1575] Feature: Allow to limit the seminar bag builder to a category
- [#1566] Feature: Allow to specify an event UID for categorybags
- [#1565] Change: The categorybagbuilder should create a bag that is sorted by title
- [#1556] Change: Add a new content wizard icon
- [#1466] Feature: Include the registration UID in the notification and thank-you e-mails and in the CSV export
- [#1563] Change: The default sorting for bags should be by UID
- [#1562] Feature: Display the UID as "Ticket ID" when editing a registration in the list view
- [#1567] Fix: HTML template in the registration process
- [#1513] Fix: Automatic setting of the timeslot titles doesn't work anymore
- [#1541] Change: Remove the return; for functions that do not return anything
- [#1519] Change: Change the ordering of seminars in the list view, patch by Stefan Galinski
- [#1169] Feature: Add a field "organizing partner" to the event's record
- [#1518] Change: Moved field "language" from topic to date records
- [#1515] Fix: Selector Widget shows event type twice in the drop-down
- [#463] Change: The seminar->getPaymentMethods* functions use too many DB queries
- [#1509] Fix: Correct the German translation of the speakers label of the timeslots table
- [#343] Feature: Add general setter functions to the objectfromdb class
- [#1471] Change: Move the testing framework from tests/fixtures/ to the oelib main directory and rename it
- [#1454] Fix: Failing test: tx_seminars_categorybag_testcase::testBagCanHaveAtLeastOneElement
- [#1294] Fix: Installing seminars without FORMidable will break BE login
- [#354] Change: Make all links in the list view display:block
- [#1419] Feature: Add functions in the testing framework to create dummy FE pages and dummy system folders